Use jQuery code for displaying #progress element
Prototype library is not loaded by default, use jQuery instead:
Element.show('progress') -> $('#progress').show()

--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -56,7 +56,7 @@
       </p>
     </fieldset>
     <p>
-    <%= form_send_buttons :onclick=>"Element.show('progress')" %>
+    <%= form_send_buttons :onclick=>"$('#progress').show()" %>
     </p>
   <% end %>
 </div>
