--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -53,7 +53,7 @@
             return false;
           }
         }
-        Element.show('progress');
+        $('#progress').show();
         return true;
       };
    <% end %>
