--- a/plugins/samba_server/app/views/samba_server/edit.html.erb
+++ b/plugins/samba_server/app/views/samba_server/edit.html.erb
@@ -25,6 +25,6 @@
 
     </table>
     <p><%= f.submit _("Update"), :disabled => disabled %>
-    <%= link_to _('Back'), {:controller => :samba_server}, :onclick=>"Element.show('progress')", :class => "button"%></p>
+    <%= link_to _('Back'), {:controller => :samba_server}, :onclick=>"$('#progress').show()", :class => "button"%></p>
   </div>
 <% end %>
