--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -25,7 +25,7 @@
       alert ("<%= _("Invalid time format. Correct one is hh:mm:ss") %>");
       return false;
       }
-      Element.show('progress');
+      $('#progress').show();
       return true;
       };
     <% end -%>
