--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
   <tr>
     <td><strong><%=h user.uid %></strong></td>
     <td><%=h user.cn %></td>
-    <td><%= link_to image_tag("/images/edit-icon.gif", :alt => :edit), {:action => :edit, :id => user.id}, :onclick=>"Element.show('progress')" %></td>
+    <td><%= link_to image_tag("/images/edit-icon.gif", :alt => :edit), {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" %></td>
     <% if @permissions[:userdelete] %>
     <td class="last"><%= html_delete_link(user.uid, :destroy) %></td>
     <% end %>
@@ -25,7 +25,7 @@
 
 <% if @permissions[:useradd] %>
 <div class="select">
-  <%= link_to _("<strong>[New User]</strong>"), {:action => :new}, :onclick=>"Element.show('progress')" -%><p/>
+  <%= link_to _("<strong>[New User]</strong>"), {:action => :new}, :onclick=>"$('#progress').show()" -%><p/>
 </div>
 <% end %>
 
