fix html injection in hosts show, even if nowhere is pointed to that URL, someone who expect REST hosts should look at it

--- a/webclient/app/views/hosts/show.html.erb
+++ b/webclient/app/views/hosts/show.html.erb
@@ -1,7 +1,7 @@
 <div class="table">
-	<%= @host.name %>
-	<%= @host.url %>
-	<%= @host.description %>
+	<%=h @host.name %>
+	<%=h @host.url %>
+	<%=h @host.description %>
 
 </div>
 <%= link_to _('Index'), host_path, :class => "button" %>
