cleanup images. Adeded licence stuff for images. Replaced images of which the licence is not clear

--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -15,7 +15,7 @@
   <tr>
     <td><strong><%=h user.uid %></strong></td>
     <td><%=h user.cn %></td>
-    <td><%= link_to image_tag("/images/edit-icon.gif", :alt => :edit), {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" %></td>
+    <td><%= link_to image_tag("/images/edit-icon.png", :alt => :edit), {:action => :edit, :id => user.id}, :onclick=>"$('#progress').show()" %></td>
     <% if @permissions[:userdelete] %>
     <td class="last"><%= html_delete_link(user.uid, :destroy) %></td>
     <% end %>
