--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -593,7 +593,7 @@ th.checkbox {
 }
 
 .busy {
-  background: transparent url(images/spinner.gif) no-repeat scroll 0 0;
+  background: transparent url(images/working.gif) no-repeat scroll 0 0;
 }
 
 .form-details {
