--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -18,7 +18,7 @@
             <span class="li-descr"><%=h host.description %></span>
           </li>
           <li>
-            <%= link_to image_tag("/images/edit-icon.gif", :alt =>  "edit"),
+            <%= link_to image_tag("/images/edit-icon.png", :alt =>  "edit"),
                   edit_host_path(host) %>
           </li>
           <li>
