adapt permission plugin to new rest-service, disable broken settings of permissions (not expected in first release)

--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -156,7 +156,7 @@
    </table>
    <br style='clear: both'>
    <br>
-   <%= submit_tag _("Set"), :disabled=> !@right_set_permissions, :class => 'button' %>
+   <% #not ready to set permissions submit_tag _("Set"), :disabled=> !@right_set_permissions, :class => 'button' %>
    <a href="/" class="button"><%=_("Back")%></a>
  <% end %>
 <% end %>
