UI fixes: consistent icons

--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -5,7 +5,7 @@
 </div>
 <!-- end: dialog box -->
 
-<div class='plugin-icon'><img src='/icons/yast-online_update.png' alt=''/></div>
+<div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/></div>
 <h2><%=
 
 if params.has_key?("custom")
