--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -1,4 +1,4 @@
-<div class='plugin-icon'><img src='/icons/yast-users.png' alt='<%= _("Administrator Settings") %>'/></div>
+<div class='plugin-icon'><img src='/icons/yast-system-user.png' alt='<%= _("Administrator Settings") %>'/></div>
 <h2><%=_("Administrator Settings")%></h2>
 
 <div class="plugin-content grid_12">
