Adjusting module headers

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -75,8 +75,7 @@
       };
    <% end %>
 <% end %>
-<div class='plugin-icon'><img src='/icons/yast-network.png' alt=''/></div>
-<h2><%=_("Network")%></h2>
+<div class='plugin-icon'><img src='/icons/yast-network.png' alt=''/><%=_("Network")%></div>
 <div class='plugin-content grid_12'>
 
 <% form_tag("/network", :method => "get") do %>
