--- a/plugins/users/app/views/users/index.html.erb
+++ b/plugins/users/app/views/users/index.html.erb
@@ -1,5 +1,4 @@
-<div class='plugin-icon'><img src='/icons/yast-users.png'/></div>
-<h2><%=_("Local User")%></h2>
+<div class='plugin-icon'><img src='/icons/yast-users.png'/><%=_("Local User")%></div>
 <div class="plugin-content grid_12">
 
 <table class="list">
