--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -524,10 +524,20 @@ input[type="submit"] {
   background-color: #f9f9f9;
 }
 
-.plugin-icon {
+.plugin-icon
+{ 
   float: left;
   margin: 1em;
+  font-size: 1.5em;
 }
+
+.plugin-icon img
+
+{
+  vertical-align: middle;
+  margin: 0.5em; 
+}
+
 
 .plugin-content {
   float: left;
