--- a/plugins/language/app/views/language/index.rhtml
+++ b/plugins/language/app/views/language/index.rhtml
@@ -1,5 +1,4 @@
-<div class='plugin-icon'><img src='/icons/yast-language.png' alt="<%= _("language plugin") %>"/></div>
-<h2><%=_("Language")%></h2>
+<div class='plugin-icon'><img src='/icons/yast-language.png' alt="<%= _("language plugin") %>"/><%=_("Language")%></div>
 <div class='plugin-content grid_12'>
 <br/>
 
