--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -27,9 +27,7 @@
   </script>
 <% end %>
 
-<!-- <div class='plugin-icon'><img src='/icons/yast-mail-server.png'/></div> -->
-<div class='plugin-icon'><img src='/icons/yast-mail-server.png'/></div>
-<h2><%=_("Mail Settings")%></h2>
+<div class='plugin-icon'><img src='/icons/yast-mail-server.png'/><%=_("Mail Settings")%></div>
 
 <div class='plugin-content grid_12'>
 
