--- a/plugins/patch_updates/app/views/patch_updates/index.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/index.html.erb
@@ -8,8 +8,7 @@
     option[value=optional]:before { content:url('/icons/kupdateapplet_optional.png'); }
 
   </style>
-  <div class='plugin-icon'><img src='/icons/yast-online_update.png'/></div>
-  <h2><%=_("Updates") %></h2>
+  <div class='plugin-icon'><img src='/icons/yast-online_update.png'/><%=_("Updates") %></div>
   <div class='plugin-content grid_12'>
   <div class="loading"></div>
   <% if @patch_updates.empty? %>
