--- a/plugins/security/app/views/security/create.erb
+++ b/plugins/security/app/views/security/create.erb
@@ -1,5 +1,5 @@
-<div class='plugin-icon'><img src='/icons/yast-security.png'/></div>
-<h2><%=_("Security")%></h2>
+<div class='plugin-icon'><img src='/icons/yast-firewall.png'/>
+<%=_("Security")%></div>
 <div class="plugin-content grid_12">
 
 <% form_tag '/security/update' do %>
