--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -5,15 +5,14 @@
 </div>
 <!-- end: dialog box -->
 
-<div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/></div>
-<h2><%=
+<div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%=
 
 if params.has_key?("custom")
     _("Custom Services")
 else
     _("System Services")
 end
-%></h2>
+%></div>
 
 <div class="plugin-content grid_12">
 
