--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -20,8 +20,7 @@ $(document).ready(function() {
 </script>
 <% end %>
 
-<div class='plugin-icon'><img src='/images/monitoring.png'/></div>
-<h2><%=_("Status")%></h2>
+<div class='plugin-icon'><img src='/images/monitoring.png'/><%=_("Status")%></div>
 <div class="plugin-content grid_12">
 
 <h3><%= _("Events") %></h3>
