--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -150,6 +150,12 @@ function plotLineGraph(graph_id, graph_title, graph_data ) {
                markerOptions: {
                  size: 0
                }
+              },
+              {color:'#E89120',
+               lineWidth: 1,
+               markerOptions: {
+                 size: 0
+               }
               }]
     });
 }
@@ -184,7 +190,13 @@ function plotLineGraphError(graph_id, graph_title, graph_data ) {
                lineWidth: 1,
                markerOptions: {
                  size: 0
-               }
+               },
+              },
+              {color:'#E89120',
+               lineWidth: 1,
+               markerOptions: {
+                 size: 0
+               },
               }]
     });
 }
