--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -56,7 +56,7 @@
       </p>
     </fieldset>
     <p>
-    <%= form_send_buttons :onclick=>"$('#progress').show()" %>
+    <%= form_send_buttons :onclick=>"$('#progress').show()", :disabled => disabled %>
     </p>
   <% end %>
 </div>
