--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -565,6 +565,7 @@ input[type="submit"] {
   -webkit-box-shadow: 0 1px 3px #ccc;
   -moz-box-shadow: 0 1px 3px #ccc;
   box-shadow: 0 1px 3px #ccc;
+  padding: 1em;
 }
 
 .plugin-content form > p,
