--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -381,7 +381,7 @@ ul.tab-nav {
   
   
     .tab-nav li a.selected {
-      background-color: #06c;
+      background-color: #7a7a7a;
       color: #fff;
     }
 /* == Text Styles ======================================================= */
@@ -431,7 +431,7 @@ label {
 }
 
 form a {
-  color: #06c;
+  color: #0000CD;
 }
 
 /* == Helper Styles ======================================================= */
@@ -458,6 +458,7 @@ input[type="submit"] {
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   width: auto !important;
+  vertical-align: baseline;
 }
   a.button:hover,
   input.button:hover {
@@ -467,6 +468,7 @@ input[type="submit"] {
   input.button {
     padding: 2px 9px;
   }
+
 /* ==Status Icons ==*/
 /* -- HTML Example --
   <div class="status-icon ok"></div>
@@ -611,6 +613,18 @@ th.checkbox {
   font-size: 0.8em;
   color: #666;
 }
+
+
+input {
+    vertical-align: top;
+}
+
+
+.nav_buttons{
+    margin: 1em;
+}
+
+
 
 /* Error Messages */
 
