--- a/plugins/permissions/app/views/permissions/index.rhtml
+++ b/plugins/permissions/app/views/permissions/index.rhtml
@@ -43,7 +43,7 @@
 
   <link rel="stylesheet" href="/inc/checktree/checktree.css" type="text/css" media="screen" title="default" charset="utf-8" />
  </head>
-<div class='plugin-icon'><img src='/icons/yast-security.png'/></div>
+<div class='plugin-icon'><img src='/icons/yast-permissions.png'/></div>
 <div class='plugin-content'>
 
 <h2><%=_("User Permissions")%></h2>
@@ -81,7 +81,7 @@
        <%= "  " * last_level %><ul>
        <%= "  " * (last_level+1) %><li>
 		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant">
-		  <label><%= @revoke_data[k][:label] %></label>
+		  <label_tree><%= @revoke_data[k][:label] %></label_tree>
             <% if k < @revoke_data.size-1 && @revoke_data[k+1][:level] == @revoke_data[k][:level] %>
        <%= "  " * (last_level+1) %></li>
             <% end %>
@@ -93,11 +93,11 @@
             <% last_level = @revoke_data[k][:level] %>
        <%= "  " * last_level %><li>
 		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant">
-		  <label><%= @revoke_data[k][:label] %></label>
+		  <label_tree><%= @revoke_data[k][:label] %></label_tree>
           <% else %>
        <%= "  " * (last_level+1) %><li>
 		  <input type="checkbox" name= <%= @revoke_data[k][:path] %> value="grant">
-		  <label><%= @revoke_data[k][:label] %></label>
+		  <label_tree><%= @revoke_data[k][:label] %></label_tree>
        <%= "  " * (last_level+1) %></li>
           <% end %>
        <% end %>
@@ -121,7 +121,7 @@
        <%= "  " * last_level %><ul>
        <%= "  " * (last_level+1) %><li>
 		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke">
-		  <label><%= @grant_data[k][:label] %></label>
+		  <label_tree><%= @grant_data[k][:label] %></label_tree>
             <% if k < @grant_data.size-1 && @grant_data[k+1][:level] == @grant_data[k][:level] %>
        <%= "  " * (last_level+1) %></li>
             <% end %>
@@ -133,11 +133,11 @@
             <% last_level = @grant_data[k][:level] %>
        <%= "  " * last_level %><li>
 		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke">
-		  <label><%= @grant_data[k][:label] %></label>
+		  <label_tree><%= @grant_data[k][:label] %></label_tree>
           <% else %>
        <%= "  " * (last_level+1) %><li>
 		  <input type="checkbox" name= <%= @grant_data[k][:path] %> value="revoke">
-		  <label><%= @grant_data[k][:label] %></label>
+		  <label_tree><%= @grant_data[k][:label] %></label_tree>
        <%= "  " * (last_level+1) %></li>
           <% end %>
        <% end %>
@@ -155,7 +155,8 @@
    </table>
    <br style='clear: both'>
    <br>
-   <% #not ready to set permissions submit_tag _("Set"), :disabled=> !@right_set_permissions, :class => 'button' %>
+   <% #not ready to set permissions submit_tag _("Set"), :disabled=> !@right_set_permissions, :class => 'button' 
+   %>
    <a href="/" class="button"><%=_("Back")%></a>
  <% end %>
 <% end %>
