use :background parameter in patch_progress requests
read patches in background only in development mode
(must be changed to production mode!)

--- a/plugins/patch_updates/app/views/patch_updates/_patch_progress.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patch_progress.html.erb
@@ -20,7 +20,7 @@
   <% javascript_tag do -%>
     setTimeout(function() {
       <%= remote_function(:update => "status_patches",
-	:url => { :controller => :patch_updates, :action => :show_summary }) %>
+	:url => { :controller => :patch_updates, :action => :show_summary, :background => true }) %>
     }, 5000);
   <% end -%>
 </div>
