--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -7,7 +7,7 @@
   <% javascript_tag do -%>
     $(document).ready( function() {
     <%= remote_function(:update => "status_patches",
-      :url => { :controller => :patch_updates, :action => :show_summary }) %>
+	:url => { :controller => :patch_updates, :action => :show_summary, :background => ENV['RAILS_ENV'] == 'development' }) %>
     });
   <% end -%>
 <% end %>
