--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -408,11 +408,12 @@ legend {
 }
 
 label {
-  display: block;
+  display: block; 
   float: left;
-  width: 7em;
+  width: 11em; 
   text-align: right;
   margin: 0.2em 0.5em;
+  white-space: nowrap;
 }
   label.width-label {
     width: auto;
