--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -37,10 +37,10 @@
   <%= f.error_messages %>
     <fieldset class="grid_12">
       <p>
-        <label for="<%= :smtp_server %>"><%=_("Outgoing mail server (SMTP)")%></label>
+        <label for="<%= :smtp_server %>"><%=_("Outgoing mail server <br> (SMTP)")%></label>
         <%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
       <p>
-        <label><%=_("Transport Layer Security (TLS)")%></label>
+        <label><%=_("Transport Layer Security<br> (TLS)")%></label>
         <%= f.select :transport_layer_security, [ [_("Disabled"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></p>
       <p>
         <label><%=_("User name")%></label>
