--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -1,4 +1,5 @@
-<div class="plugin-icon"><img src='/icons/yast-system-user.png' alt='<%= _("Administrator Settings") %>'><%=_("Administrator Settings")%></div>
+<div class='plugin-icon'><img src='/icons/yast-system-user.png' alt='<%= _("Administrator Settings") %>'/></div>
+<h2><%=_("Administrator Settings")%></h2>
 
 <div class="plugin-content grid_12">
 <% content_for :head do %>
@@ -48,17 +49,22 @@
 
 <% disabled = ! @permissions[:write] %>
 
+  <p>
+  <%= 
+  _("Here, configure the settings for system administrator ('root').")
+  %>
+  </p>
+
   <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put, :id => "adminForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
     <fieldset id="password">
 	<p><label><%=_("Password")%></label>
-	<%= f.password_field :password, :disabled => disabled %>
+	<%= f.password_field :password, :disabled => disabled, :equalTo => "#administrator_confirm_password", :class => "required" %>
 	</p>
-	<p>
-	<label><%=_("Confirm password")%></label>
-    <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#administrator_password" %>
-	<%= f.submit _("Save"), :name => "save_password", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_confirm_password');", :class=>'cancel' %>
-    </p>
+	<p><label><%=_("Confirm password")%></label>
+	<%= f.password_field :confirm_password, :disabled => disabled %>
+	<%= f.submit _("Save"), :name => "save_password", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_password');", :class=>'cancel' %>
+	</p>
 	<p>
 	<label><%=_("Forward mail to")%></label>
 	<%= f.text_field :aliases, :disabled => disabled, :class => "emails" %>
