Added Subnet mask string into network module

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -170,7 +170,7 @@
       <%=text_field_tag :ip, @ip, :disabled => static_disabled %>
     </p>
     <p>
-      <label for="<%= :netmask %>"><%=_("Prefixlen")%></label>
+      <label for="<%= :netmask %>"><%=_("Subnet mask / Prefixlen")%></label>
       <%=text_field_tag :netmask, @netmask, :disabled => static_disabled %>
     </p>
   </fieldset>
