--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -6,7 +6,7 @@
   <%= javascript_include_tag :defaults %>
 
   <style type="text/css">
-    label.error { float: none; color: red; padding-left: .5em; vertical-align: top; }
+    label.error { display: none; color: red; padding-left: 7.5em; padding-bottom: 1em; text-align: left; vertical-align: top; width: 50% }
   </style>
 
   <script type="text/javascript">
@@ -61,15 +61,20 @@
 	<p><label><%=_("Password")%></label>
 	<%= f.password_field :password, :disabled => disabled, :equalTo => "#administrator_confirm_password", :class => "required" %>
 	</p>
-	<p><label><%=_("Confirm password")%></label>
-	<%= f.password_field :confirm_password, :disabled => disabled %>
-	<%= f.submit _("Save"), :name => "save_password", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_password');", :class=>'cancel' %>
-	</p>
+	<p>
+	<label><%=_("Confirm password")%></label>
+    <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#administrator_password" %>
+	<%= f.submit _("Save"), :name => "save_password", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_confirm_password');", :class=>'cancel' %>
+    </p>
+    <!-- this is a pre-generated placeholder for the validation messages -->
+    <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
 	<p>
 	<label><%=_("Forward mail to")%></label>
-	<%= f.text_field :aliases, :disabled => disabled, :class => "emails" %>
+	<%= f.text_field :aliases, :disabled => disabled, :class => "emails", :style => 'width: auto' %>
 	<%= f.submit _("Save"), :name => "save_aliases", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_aliases');", :class=>'cancel' %>
 	</p>
+    <!-- this is a pre-generated placeholder for the validation messages -->
+    <p><label for="administrator_aliases" generated="true" class="error"></label></p>
     </fieldset>
     <p><%= form_send_buttons :onclick=>"alias_valid = $('#adminForm').validate().element('#administrator_aliases'); return $('#adminForm').validate().element('#administrator_confirm_password') && alias_valid;", :disabled => disabled %>
     </p>
